--- a/MVCDependencyInjectionType/Views/Home/Index.cshtml
+++ b/MVCDependencyInjectionType/Views/Home/Index.cshtml
@@ -1,8 +1,11 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
+
+    var trasient = (MyObject)ViewBag.trasient;
+    var scoped = (MyObject)ViewBag.scoped;
+    var singleton = (MyObject)ViewBag.singleton;
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    
 </div>
